# cookiecutter-cppyy-cmake

./: .gitignore  pyproject.toml  requirements-dev.txt
